@@ -1,3 +1,9 @@
+2004-11-12  Albert Chu  <chu11@llnl.gov>
+
+	* README: Cleaned up.
+
+	* gendersllnl.spec.in: Updated description.
+	
 2004-10-28  Albert Chu  <chu11@llnl.gov>
 
 	* gendersllnl.spec.in: Fixed additional port issues.
